Fixes errors when loading the i18n cache without connection. Fixes text wrap of nicknames in the quiz lobby

--- a/src/app/quiz/quiz-manager/quiz-manager-details/quiz-manager-details-overview/quiz-manager-details-overview.component.scss
+++ b/src/app/quiz/quiz-manager/quiz-manager-details/quiz-manager-details-overview/quiz-manager-details-overview.component.scss
@@ -4,7 +4,3 @@
     flex: 1;
   }
 }
-
-.break-word {
-  word-break: break-word;
-}
