--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,3 +146,7 @@ fa-icon {
     }
   }
 }
+
+.break-word {
+  word-break: break-word;
+}
